--- a/config.json
+++ b/config.json
@@ -2,5 +2,7 @@
     "email": "your_email_adress",
     "password": "your_password",
     "host": "adress_of_imap_server_of_your_email_host",
-    "port": 993
+    "port": 993,
+    "lastFactureName": "",
+    "lastCode": ""
 }
