--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/rems-38/codecapet#readme",
   "dependencies": {
+    "discord.js": "^13.1.0",
     "download-email-attachments": "^2.0.1",
     "imap": "^0.8.19",
     "lodash": "^4.17.21",
     "mailparser": "^3.3.1",
+    "node": "^16.10.0",
+    "node-schedule": "^2.0.0",
+    "npm": "^7.24.1",
     "pdf-parser": "^1.0.5",
     "smpp": "^0.6.0-rc.0",
     "util": "^0.12.4"
