--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "host": "adress_of_imap_server_of_your_email_host",
     "port": 993,
     "lastFactureName": null,
-    "lastCode": "",
+    "lastCode": null,
     "tokenBotDiscord": "le_token_de_votre_bot_discord",
     "discordUserID": "id_de_votre_utilisateur_discord"
 }
